# pinetime-flasher

./: .gitignore  .gitmodules  COPYING  LICENSE  Makefile  README.md  advanced.c  advanced.h  app  app.c  app.glade  app.glade~  app.ui  app.ui~  com.arteeh.Companion.yml  com.arteeh.Flasher.metainfo.xml  com.arteeh.Flasher.yml  com.arteeh.PineTime-Companion.json  com.arteeh.PineTime-Companion.yml  flatpak  flatpak.sh  glade-sucks.md  meson.build  pinetime-companion  pinetime-companion.c  pinetime-companion.h  pinetime-companion.ui  pinetime-companion.ui~  test.glade  test.glade~
app/: com.arteeh.Flasher.desktop  com.arteeh.Flasher.metainfo.xml  com.arteeh.Flasher.yml  flatpak
code/: main.py  options.py  setup.py  swd-stlink.ocd
data/: meson.build  (+3 more)
po/: POTFILES  (+1 more)
src/: Makefile  advanced.c  advanced.h  advanced.ui  companion.c  companion.gresource.xml  companion.h  companion.ui  glade-sucks  main.c  main.h  meson.build  pinetime-companion  pinetime-companion.c  pinetime-companion.gresource.xml  pinetime-companion.h  pinetime-companion.ui  pinetime-flasher  pinetime-flasher.c  pinetime-flasher.gresource.xml  pinetime-flasher.ui  pinetime-flasher.ui~  pinetime_companion-window.c  pinetime_companion-window.h  pinetime_companion-window.ui  pinetime_companion.gresource.xml  ui.c  updates.c  updates.h
src/openocd/aarch64/distro-info/scripts/helper/: host-functions-source.sh
src/openocd/aarch64/share/doc/info/: openocd.info-1  openocd.info-2
src/openocd/arm32/share/doc/info/: openocd.info
src/openocd/arm64/distro-info/scripts/: host-defs-source.sh
src/openocd/x86_64/distro-info/scripts/: host-defs-source.sh
src/openocd/x86_64/distro-info/scripts/helper/: README.md  common-functions-source.sh  common-libs-functions-source.sh
(+5 files in other folders)
